# Intelligent-snowplow-design

STM32/: README.md
STM32/HAREWER/ADC/: adc.c  adc.h
STM32/HAREWER/ENCODER/: encoder.c  encoder.h
STM32/HAREWER/GPIO/: gpio.c  gpio.h
STM32/HAREWER/MOTO/: moto.c  moto.h
STM32/HAREWER/PWM/: pwm.c  pwm.h
STM32/SYSTEM/delay/: delay.c
STM32/SYSTEM/sys/: sys.c  sys.h
STM32/SYSTEM/usart/: usart.c
STM32/USER/: AT8236.uvguix.GUI  AT8236.uvoptx  AT8236.uvprojx  main.c
STM32/USER/Listings/: Minibalance.map  startup_stm32f10x_md.lst
STM32_controller/firmware/: originbot_controller_firmware_v1.0.0.hex  originbot_controller_firmware_v1.0.1.hex  originbot_controller_firmware_v1.0.2.hex
STM32_controller/material/通信协议/: 铲雪车上下位机通讯协议.docx  铲雪车上下位机通讯协议.xlsx
STM32_controller/source/snowplow_controller_project/: Project.uvguix.123  Project.uvguix.Administrator  Project.uvguix.gui  Project.uvoptx  Project.uvprojx
STM32_controller/source/snowplow_controller_project/STM32F10xLib/Include/: core_cm4_simd.h
STM32_controller/source/snowplow_controller_project/Source/APP/: JY901.c  JY901.h  Main.c  Main.h  app_motion_control.c  app_motion_control.h  pid.c  pid.h  protocol.c  protocol.h
linux_Applications/: README.md
linux_Drive/: README.md
linux_ROS/snowplow_ROS/snowplow_base/launch/: robot.launch.py
linux_ROS/snowplow_ROS/snowplow_base/src/: snowplow_base.cpp
linux_ROS/snowplow_ROS/snowplow_bringup/launch/: camera.launch.py  camera_internal.launch.py  originbot.launch.py  ydlidar.launch.py
linux_ROS/snowplow_ROS/snowplow_deeplearning/parking_search/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
linux_ROS/snowplow_ROS/snowplow_deeplearning/play_football/: CMakeLists.txt  package.xml
linux_ROS/snowplow_ROS/snowplow_deeplearning/play_football/include/play_football/: play_football.h
linux_ROS/snowplow_ROS/snowplow_deeplearning/play_football/src/: play_football.cpp
linux_ROS/snowplow_ROS/snowplow_demo/originbot_demo/: control_buzzer.py  control_led.py  draw_circle.py  echo_odom.py  echo_status.py  transport_img.py
linux_ROS/snowplow_ROS/snowplow_navigation/launch/: nav_bringup.launch.py  odom_ekf.launch.py
ros_noetic/build_isolated/: catkin_make_isolated.cache
ros_noetic/build_isolated/steer/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_noetic/build_isolated/steer/atomic_configure/: .rosinstall  _setup_util.py
ros_noetic/build_isolated/steer/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
ros_noetic/build_isolated/steer/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_noetic/devel/: .catkin  .rosinstall  local_setup.sh
ros_noetic/devel/lib/pkgconfig/: steer.pc
ros_noetic/devel/lib/steer/: steer
ros_noetic/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
ros_noetic/devel_isolated/steer/: .catkin  local_setup.sh  setup.sh
ros_noetic/src/steer/: CMakeLists.txt  package.xml
ros_noetic/src/steer/src/: steer.cpp
(+53 files in other folders)
